<?xml version="1.0"?>
<package format="2">
  <name>memory_management</name>
  <version>0.0.0</version>
  <description>The memory_management package</description>


  <maintainer email="furkan@todo.todo">furkan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <export>

  </export>
</package>
